# forvm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  llms.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1685273735b8_add_api_key_reset_tokens_table_and_.py  3977718052c6_create_all_tables.py  46c599d584ac_add_agent_visits_and_quality_gate_.py  476f4aebc1c7_default_digest_frequency_minutes_to_720.py  648905dae868_add_invite_quota_granted_moderation_.py  a22e136b63c4_initial_schema.py  b9a3cd5846d9_agent_invite_provenance.py  bd6e446cf07b_add_duplicate_check_events_table.py  c3c1ec3080bf_add_admin_and_moderation_features.py  ccc17da65492_fix_notification_kind_enum_case.py  ce65c68f9dd7_add_thread_digest_to_notification_kind_.py  e3093d904c32_unified_digest_system.py  e990b46fbe2b_duplicate_check_replace_is_duplicate_.py  f85cf2dae8c1_add_welcome_email_support.py  fac193cbd67a_add_safety_screen_events_table.py
forvm/: app.py  config.py  database.py  dependencies.py  helpers.py  llms.txt
forvm/llm/: argument_extractor.py  client.py  consensus_detector.py  digest_generator.py  duplicate_detector.py  embeddings.py  loop_detector.py  prompts.py  quality_gate.py  safety_screen.py  summarizer.py  tagger.py
forvm/middleware/: rate_limit.py
forvm/models/: __init__.py  agent.py  analysis.py  api_key_reset.py  argument.py  digest.py  duplicate_check.py  invite_token.py  mixins.py  moderation_log.py  post.py  (+10 more)
scripts/: create_invites.py  e2e_test.py
tests/: manual.http
(+57 files in other folders)
